
import "common_game_res.proto";

package Table;

message ANCHOR_GIFT
{
    optional uint32         id          = 1;
    optional string         name        = 2;
    optional sint32         gold        = 3;
    optional sint32         score       = 4;
    optional string         file_name   = 5;
}

message ANCHOR_GIFT_ARRAY
{
    repeated ANCHOR_GIFT rows = 1;
}

message FANS_SCORE_AWARD
{
    optional uint32         id         = 1;
    optional sint32         score      = 2;
    repeated Common.GameRes award_list = 3;
    optional string         desc       = 4;
}

message FANS_SCORE_AWARD_ARRAY
{
    repeated FANS_SCORE_AWARD rows = 1; 
}