import "common_scene.proto";
import "common_role.proto";
import "common_game_res.proto";
import "common_multiple_item.proto";

package Common;

enum RoomMemberType
{
    ROOM_MEMBER  = 1;
    ROOM_CAPTAIN = 2;
    ROOM_ROBOT   = 3;
    ROOM_RESERVED_1 = 4;
    ROOM_RESERVED_2 = 5;
}

message RoomCell
{
    optional sint32         pos      = 1;
    optional uint32         id       = 2;
    optional RoomMemberType type     = 3[default = ROOM_MEMBER];
    optional bool           ready    = 4[default = false];
    optional sfixed64       out_time = 5; // 自动踢出时间
}

message TrialRoleInfo
{
    optional RoleInfo   role_info        = 1;
    optional sint32     last_trial_count = 2;
    optional sint32     buy_trial_count  = 3;
}

message TrialRoomInfo
{
    optional uint32        room_id     = 1;
    optional uint32        instance_id = 2;
    repeated RoomCell      cell_list   = 3;
    repeated TrialRoleInfo role_list   = 4;
    optional string        voice_url   = 5; 
    optional string        name        = 6; 
    optional uint32        king_scene_id = 7;
    optional uint32        trial_id      = 8;
    repeated Common.RoleBrief role_brief_list = 9;
    optional sint32        award_buff  = 10;
    optional bool          isprivate   = 11[default = false];
}

message TrialInvite
{
    optional uint32           room_id     = 1;
    optional uint32           instance_id = 2;
    optional Common.RoleBrief brief       = 3;
    optional sfixed64         timestamp   = 4;
}

message TrialInviteRole
{
    optional Common.RoleBrief brief         = 1;
    optional bool             invited       = 2[default = false];
    optional sfixed64         recourse_time = 3;
    optional RoleRelationType relation      = 4[default = RELATION_TYPE_NULL];  
}

message TrialRecourse
{
    optional uint32     id        = 1;
    optional sfixed64   timestamp = 2;
}

message TrialRecord
{
    optional uint32       id          = 1;
    optional InstanceType type        = 2[default = INSTANCE_TYPE_INVLID];
    optional sint32       star        = 3;
    //repeated uint32       passed_instance_list = 4;
    optional InstanceType enable_type = 4[default = INSTANCE_TYPE_NORMAL];
}

message TrialAward
{
    optional uint32                 role_id         = 1;
    repeated Common.GameRes         award_list      = 2;
    repeated Common.MultipleItem    mul_item_list   = 3;
}

message TrialRes
{
    repeated Common.GameRes         res_list      = 1;
    optional bool                   awarded       = 2[default = false];
}

message TrialResInfo
{
    repeated Common.GameRes    award_list      = 1;
    repeated Common.TrialRes   screen_award    = 2;
    repeated Common.GameRes    king_award_list = 3;
}

message TrialRolePassInfo
{
    optional uint32              id             = 1;
    optional bool                robot          = 2[default = false];
    repeated Common.MultipleItem mul_item_list  = 3; 
}
